--- a/src/index.css
+++ b/src/index.css
@@ -25,18 +25,18 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   line-height: 1.1;
 }
 
 button {
   border-radius: 8px;
+  margin: 1em;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -65,4 +65,34 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.contaner {
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+input {
+  margin: 1em;
+  padding: 0.7em;
+  border-radius: 3px;
+}
+
+section {
+  margin: 50px;
+}
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+
+th, td {
+  width: 200px;
+  padding: 3px 0 3px 0
+}
+
+.form-input {
+  display: block;
 }
