--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -84,16 +83,44 @@ input {
 section {
   margin: 50px;
 }
-table, th, td {
+table,
+th,
+td {
   border: 1px solid white;
   border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
   width: 200px;
-  padding: 3px 0 3px 0
+  padding: 3px 0 3px 0;
 }
 
 .form-input {
   display: block;
+}
+
+.loader-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
